feat: add get shortener API
