# internal/shortener/model/get_shortener_dto.go
@@ -1,0 +1,9 @@
+package model
+
+type GetShortenerReq struct {
+	Slug string `json:"slug"`
+}
+
+type GetShortenerResp struct {
+	RealURL string `json:"real_url"`
+}
